--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 *.*~
-pybind/build
-pybind/ucp_py.c
-pybind/ucp_py.*.so
-pybind/*.a
-pybind/*.o
+build
+ucp_py/_libs/ucp_py.c
+*.so
+ucp_py/_libs/*.a
+ucp_py/_libs/*.o
 
 dask-worker-space
 __pytestcache__
