--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 *.*~
 build
 *.so
-ucp_py/_libs/*.a
-ucp_py/_libs/*.o
-ucp_py/_libs/*.c
+ucp/_libs/*.a
+ucp/_libs/*.o
+ucp/_libs/*.c
 
 dask-worker-space
 __pytestcache__
