--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,10 @@
 [metadata]
 license_files = LICENSE
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = ucp/_version.py
+versionfile_build = ucp/_version.py
+tag_prefix =
+parentdir_prefix = ucp-
