small path fix for cython check in pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,7 +17,7 @@ repos:
               - id: flake8
                 alias: flake8-cython
                 name: flake8-cython
-                args: ["--config=python/cudf/.flake8.cython"]
+                args: ["--config=.flake8.cython"]
                 types: [cython]
 default_language_version:
       python: python3
