isort: added THIRDPARTY to sections

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,7 +29,7 @@ known_dask=
     dask
     distributed
     dask_cuda
-sections=FUTURE,STDLIB,DASK,FIRSTPARTY,LOCALFOLDER
+sections=FUTURE,STDLIB,DASK,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 skip=
     .eggs
     .git
