--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,9 +11,11 @@ jobs:
         run: |
           sudo apt-get update -y
           sudo apt-get install -y libnuma-dev
-      - name: Create docs environment
-        uses: conda-incubator/setup-miniconda@v2
-        with:
-          activate-environment: ucx_dev
-          environment-file: conda/environments/builddocs_py37.yml
-          auto-activate-base: false
+      - run: |
+          ls
+      # - name: Create docs environment
+      #   uses: conda-incubator/setup-miniconda@v2
+      #   with:
+      #     activate-environment: ucx_dev
+      #     environment-file: conda/environments/builddocs_py37.yml
+      #     auto-activate-base: false
