--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -7,15 +7,15 @@ jobs:
     name: Build Sphinx documentation
     runs-on: "ubuntu-latest"
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2.3.4
       - name: Install libnuma
         run: |
           sudo apt-get update -y
           sudo apt-get install -y libnuma-dev
-      - run: |
-          ls
-      # - name: Create docs environment
-      #   uses: conda-incubator/setup-miniconda@v2
-      #   with:
-      #     activate-environment: ucx_dev
-      #     environment-file: conda/environments/builddocs_py37.yml
-      #     auto-activate-base: false
+      - name: Create docs environment
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          activate-environment: ucx_dev
+          environment-file: conda/environments/builddocs_py37.yml
+          auto-activate-base: false
