--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,3 +19,7 @@ jobs:
           activate-environment: ucx_dev
           environment-file: conda/environments/builddocs_py37.yml
           auto-activate-base: false
+      - name: Build documentation
+        run: |
+          cd docs
+          make html
