--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Commit changes to docs
         run: |
           git clone https://github.com/charlesbluca/ucx-py.git --branch gh-pages --single-branch gh-pages
-          cp -r build/html/* gh-pages/
+          cp -r docs/build/html/* gh-pages/
           cd gh-pages
           touch .nojekyll
           git config --local user.email "action@github.com"
