--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,6 +1,8 @@
+name: UCX-Py documentation build
+
 on:
   push:
-    branches: ["gha-docs-build"]
+    branches: ["branch-0.20"]
 
 jobs:
   build:
@@ -29,7 +31,7 @@ jobs:
           make html
       - name: Commit changes to docs
         run: |
-          git clone https://github.com/charlesbluca/ucx-py.git --branch gh-pages --single-branch gh-pages
+          git clone https://github.com/rapidsai/ucx-py.git --branch gh-pages --single-branch gh-pages
           cp -r docs/build/html/* gh-pages/
           cd gh-pages
           touch .nojekyll
