--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,7 @@ name: UCX-Py documentation build
 
 on:
   push:
-    branches: ["branch-0.20"]
+    branches: ["gha-docs-build"]
 
 jobs:
   build:
@@ -12,8 +12,15 @@ jobs:
       run:
         shell: bash -l {0}
     steps:
-      - name: Checkout repository
+      - name: Checkout latest changes
         uses: actions/checkout@v2.3.4
+        with:
+          path: latest
+      - name: Checkout gh-pages
+        uses: actions/checkout@v2.3.4
+        with:
+          ref: gh-pages
+          path: gh-pages
       - name: Install libnuma
         run: |
           sudo apt-get update -y
@@ -26,22 +33,21 @@ jobs:
           auto-activate-base: false
       - name: Build documentation
         run: |
-          conda activate ucx_dev
-          cd docs
+          cd latest/docs
           make html
       - name: Commit changes to docs
         run: |
-          git clone https://github.com/rapidsai/ucx-py.git --branch gh-pages --single-branch gh-pages
-          cp -r docs/build/html/* gh-pages/
-          cd gh-pages
-          touch .nojekyll
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add .
-          git commit -m "Update documentation" -a || true
-      - name: Push changes
-        uses: ad-m/github-push-action@v0.6.0
-        with:
-          branch: gh-pages
-          directory: gh-pages
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          COMMIT_SHA=$(echo "${COMMIT_SHA}" | cut -c 1-7)
+          rm -rf gh-pages/*
+          cp -r latest/docs/build/html/* gh-pages/
+          git config user.name "GitHub Actions"
+          git config user.email "action@github.com"
+          git add --all
+          git commit --allow-empty -m "Update docs from ${COMMIT_SHA}"
+          git push
+      # - name: Push changes
+      #   uses: ad-m/github-push-action@v0.6.0
+      #   with:
+      #     branch: gh-pages
+      #     directory: gh-pages
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
