--- a/.github/workflows/rtd.yml
+++ b/.github/workflows/rtd.yml
@@ -13,7 +13,9 @@ jobs:
         uses: actions/checkout@v2.3.4
         with:
           ref: readthedocs
+          fetch-depth: 0
       - name: Merge upstream changes
         run: |
-          git merge branch-0.20
+          git fetch origin
+          git merge origin/branch-0.20
           git push
