--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -3,7 +3,7 @@ build:
 
 python:
    version: 3.7
-   setup_py_install: false
+   setup_py_install: true
 
 conda:
    file: conda/environments/builddocs_py37.yml
