--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,7 +5,9 @@ build:
 
 python:
   version: 3.7
-  setup_py_install: true
+  install:
+    - method: setuptools
+      path: .
 
 conda:
   file: conda/environments/builddocs_py37.yml
