Replace `file` with `environment` under `conda`

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,4 +10,4 @@ python:
       path: .
 
 conda:
-  file: conda/environments/builddocs_py37.yml
+  environment: conda/environments/builddocs_py37.yml
