--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,12 @@
 repos:
-      - repo: https://github.com/timothycrosley/isort
-        rev: 5.0.7
+      - repo: https://github.com/pycqa/isort
+        rev: 5.6.4
         hooks:
               - id: isort
+                args: ["--settings-path=setup.cfg"]
+                exclude: __init__.py$
+                types: [text]
+                types_or: [python, cython, pyi]
       - repo: https://github.com/ambv/black
         rev: 19.10b0
         hooks:
