--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
                 types: [text]
                 types_or: [python, cython, pyi]
       - repo: https://github.com/ambv/black
-        rev: 19.10b0
+        rev: 22.3.0
         hooks:
               - id: black
       - repo: https://gitlab.com/pycqa/flake8
