--- a/conda/recipes/ucx-py/meta.yaml
+++ b/conda/recipes/ucx-py/meta.yaml
@@ -1,10 +1,9 @@
-{% set name = 'ucx-py' %}
 {% set version = environ.get('GIT_DESCRIBE_TAG', '0.0.0.dev').lstrip('v') + environ.get('VERSION_SUFFIX', '') %}
 {% set py_version = environ.get('CONDA_PY', '38') %}
 {% set cuda_version = '.'.join(environ.get('CUDA', '11.2').split('.')[:2]) %}
 
 package:
-  name: {{ name|lower }}
+  name: ucx-py
   version: {{ version }}
 
 source:
