fix wheels workflow

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -9,7 +9,8 @@ jobs:
   ucx-py-wheel:
     uses: rapidsai/shared-action-workflows/.github/workflows/wheels-manylinux.yml@feat/wheel-ci-actions-ptaylor
     with:
-      package-name: ucp
+      package-name: ucx-py
       package-dir: .
       python-version: "3.8 3.9"
+      gpu-smoketest: "import ucp; print(ucp.get_config())"
     secrets: inherit
