--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -9,6 +9,5 @@ jobs:
       package-name: ucx_py
       package-dir: .
       python-version: "3.8 3.9"
-      cibw-before-build: "export LD_PRELOAD=/usr/lib/ucx/libuct_cma.so:/usr/lib/ucx/libuct_rdmacm.so:/usr/lib/ucx/libuct_cuda.so:/usr/lib/ucx/libuct_ib.so:/usr/lib/ucx/libucm_cuda.so:/lib/x86_64-linux-gnu/libcuda.so.1"
-      cibw-environment: "LD_PRELOAD=/usr/lib/ucx/libuct_cma.so:/usr/lib/ucx/libuct_rdmacm.so:/usr/lib/ucx/libuct_cuda.so:/usr/lib/ucx/libuct_ib.so:/usr/lib/ucx/libucm_cuda.so:/lib/x86_64-linux-gnu/libcuda.so.1"
+      cibw-environment: "LD_PRELOAD=/usr/lib/ucx/libuct_cma.so:/usr/lib/ucx/libuct_rdmacm.so:/usr/lib/ucx/libuct_cuda.so:/usr/lib/ucx/libuct_ib.so:/usr/lib/ucx/libucm_cuda.so"
     secrets: inherit
