--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -12,6 +12,7 @@ jobs:
       package-name: ucx_py
       package-dir: .
       python-version: "3.8"
+      python-package-versioneer-override: "22.10.00a"
 
       manylinux-container-amd64: "rapidsai/manylinux2014"
       manylinux-container-arm64: "rapidsai/manylinux_2_31"
@@ -28,6 +29,9 @@ jobs:
 
       test-container-amd64: "rapidsai/manylinux_2_27"
       test-container-arm64: "rapidsai/manylinux_2_31" 
+
+      test-extras: "test"
+      test-unittest: "pytest -v"
     secrets: inherit
   ucx-py-cp39-wheel:
     uses: rapidsai/shared-action-workflows/.github/workflows/wheels-manylinux.yml@feat/wheel-ci-actions-2
@@ -35,6 +39,7 @@ jobs:
       package-name: ucx_py
       package-dir: .
       python-version: "3.9"
+      python-package-versioneer-override: "22.10.00a"
 
       manylinux-container-amd64: "rapidsai/manylinux2014"
       manylinux-container-arm64: "rapidsai/manylinux_2_31"
@@ -51,4 +56,7 @@ jobs:
 
       test-container-amd64: "rapidsai/manylinux_2_27"
       test-container-arm64: "rapidsai/manylinux_2_31" 
+
+      test-extras: "test"
+      test-unittest: "pytest -v"
     secrets: inherit
