--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -30,8 +30,10 @@ jobs:
       test-container-amd64: "rapidsai/manylinux_2_27"
       test-container-arm64: "rapidsai/manylinux_2_31" 
 
+      test-before-amd64: "pip install cupy-cuda115"
+      test-before-arm64: "pip install cupy-cuda11x -f https://pip.cupy.dev/aarch64"
       test-extras: "test"
-      test-requires: "cloudpickle"
+      test-requires: "cloudpickle dask distributed"
       test-unittest: "pytest -v ./"
     secrets: inherit
   ucx-py-cp39-wheel:
@@ -58,7 +60,9 @@ jobs:
       test-container-amd64: "rapidsai/manylinux_2_27"
       test-container-arm64: "rapidsai/manylinux_2_31" 
 
+      test-before-amd64: "pip install cupy-cuda115"
+      test-before-arm64: "pip install cupy-cuda11x -f https://pip.cupy.dev/aarch64"
       test-extras: "test"
-      test-requires: "cloudpickle"
+      test-requires: "cloudpickle dask distributed"
       test-unittest: "pytest -v ./"
     secrets: inherit
