--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -34,7 +34,7 @@ jobs:
       test-before-arm64: "pip install cupy-cuda11x -f https://pip.cupy.dev/aarch64"
       test-extras: "test"
       test-requires: "cloudpickle dask distributed"
-      test-unittest: "pytest -v ./"
+      test-unittest: "pytest -vs ./tests/ && pytest -vs ./ucp/_libs/tests/"
     secrets: inherit
   ucx-py-cp39-wheel:
     uses: rapidsai/shared-action-workflows/.github/workflows/wheels-manylinux.yml@feat/wheel-ci-actions-2
@@ -64,5 +64,5 @@ jobs:
       test-before-arm64: "pip install cupy-cuda11x -f https://pip.cupy.dev/aarch64"
       test-extras: "test"
       test-requires: "cloudpickle dask distributed"
-      test-unittest: "pytest -v ./"
+      test-unittest: "pytest -vs ./tests/ && pytest -vs ./ucp/_libs/tests/"
     secrets: inherit
