--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -13,6 +13,7 @@ jobs:
       package-dir: .
       python-version: "3.8"
       python-package-versioneer-override: "0.28.00a"
+      python-package-build-tag: "0"
 
       manylinux-container-amd64: "rapidsai/manylinux2014"
       manylinux-container-arm64: "rapidsai/manylinux_2_31"
@@ -34,8 +35,7 @@ jobs:
       test-before-arm64: "pip install cupy-cuda11x -f https://pip.cupy.dev/aarch64"
       test-extras: "test"
       test-requires: "cloudpickle dask distributed"
-        # these hang for the time being
-        #test-unittest: "pytest --cache-clear -vs ./ucp/_libs/tests/ && pytest --cache-clear -vs ./tests/"
+      test-unittest: "pytest --cache-clear -vs ./ucp/_libs/tests/ && pytest --cache-clear -vs ./tests/"
     secrets: inherit
   ucx-py-cp39-wheel:
     uses: rapidsai/shared-action-workflows/.github/workflows/wheels-manylinux.yml@feat/wheel-ci-actions-2
@@ -44,6 +44,7 @@ jobs:
       package-dir: .
       python-version: "3.9"
       python-package-versioneer-override: "0.28.00a"
+      python-package-build-tag: "0"
 
       manylinux-container-amd64: "rapidsai/manylinux2014"
       manylinux-container-arm64: "rapidsai/manylinux_2_31"
@@ -65,6 +66,5 @@ jobs:
       test-before-arm64: "pip install cupy-cuda11x -f https://pip.cupy.dev/aarch64"
       test-extras: "test"
       test-requires: "cloudpickle dask distributed"
-        # these hang for the time being
-        #test-unittest: "pytest --cache-clear -vs ./ucp/_libs/tests/ && pytest --cache-clear -vs ./tests/"
+      test-unittest: "pytest --cache-clear -vs ./ucp/_libs/tests/ && pytest --cache-clear -vs ./tests/"
     secrets: inherit
