--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -36,7 +36,7 @@ jobs:
       test-before-arm64: "pip install cupy-cuda11x -f https://pip.cupy.dev/aarch64"
       test-extras: "test"
       test-requires: "cloudpickle dask distributed"
-      test-unittest: "pytest --cache-clear -vs ./ucp/_libs/tests/ && pytest --cache-clear -vs ./tests/"
+      test-unittest: "pytest --cache-clear -vs ./ucp/_libs/tests/ && cd ./tests/ && pytest --cache-clear -vs ./"
     secrets: inherit
   ucx-py-cp39-wheel:
     uses: rapidsai/shared-action-workflows/.github/workflows/wheels-manylinux.yml@feat/wheel-ci-actions-2
@@ -68,5 +68,5 @@ jobs:
       test-before-arm64: "pip install cupy-cuda11x -f https://pip.cupy.dev/aarch64"
       test-extras: "test"
       test-requires: "cloudpickle dask distributed"
-      test-unittest: "pytest --cache-clear -vs ./ucp/_libs/tests/ && pytest --cache-clear -vs ./tests/"
+      test-unittest: "pytest --cache-clear -vs ./ucp/_libs/tests/ && cd ./tests/ && pytest --cache-clear -vs ./"
     secrets: inherit
