--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -13,7 +13,7 @@ jobs:
       package-dir: .
       python-version: "3.8"
       python-package-versioneer-override: "0.28.00a"
-      python-package-build-tag: "0"
+      python-package-build-tag: "1"
 
       manylinux-container-amd64: "rapidsai/manylinux2014"
       manylinux-container-arm64: "rapidsai/manylinux_2_31"
@@ -30,6 +30,7 @@ jobs:
 
       test-container-amd64: "rapidsai/manylinux_2_27"
       test-container-arm64: "rapidsai/manylinux_2_31" 
+      test-docker-options: "--cap-add CAP_SYS_PTRACE --shm-size=8g"
 
       test-before-amd64: "pip install cupy-cuda115"
       test-before-arm64: "pip install cupy-cuda11x -f https://pip.cupy.dev/aarch64"
@@ -44,7 +45,7 @@ jobs:
       package-dir: .
       python-version: "3.9"
       python-package-versioneer-override: "0.28.00a"
-      python-package-build-tag: "0"
+      python-package-build-tag: "1"
 
       manylinux-container-amd64: "rapidsai/manylinux2014"
       manylinux-container-arm64: "rapidsai/manylinux_2_31"
@@ -61,6 +62,7 @@ jobs:
 
       test-container-amd64: "rapidsai/manylinux_2_27"
       test-container-arm64: "rapidsai/manylinux_2_31" 
+      test-docker-options: "--cap-add CAP_SYS_PTRACE --shm-size=8g"
 
       test-before-amd64: "pip install cupy-cuda115"
       test-before-arm64: "pip install cupy-cuda11x -f https://pip.cupy.dev/aarch64"
