--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
         rev: 5.10.1
         hooks:
               - id: isort
-                args: ["--settings-path=setup.cfg"]
+                args: ["--settings-path=pyproject.toml"]
                 exclude: __init__.py$
                 types: [text]
                 types_or: [python, cython, pyi]
