Move pytest to `pyproject.toml`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,6 +102,9 @@ skip = [
     "__init__.py",
 ]
 
+[tool.pytest.ini_options]
+xfail_strict = true
+
 [tool.setuptools]
 license-files = ["LICENSE"]
 package-dir = {"" = "."}
