--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@
 [build-system]
 build-backend = "setuptools.build_meta"
 requires = [
-    "setuptools",
+    "setuptools>=64.0.0",
     "cython>=0.29,<0.30",
     "tomli  ; python_version < '3.11'",
 ]
