--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,6 +108,9 @@ xfail_strict = true
 license-files = ["LICENSE"]
 zip-safe = false
 
+[tool.setuptools.packages.find]
+exclude=["tests*"]
+
 [tool.versioneer]
 VCS = "git"
 style = "pep440"
