--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,12 @@
 # limitations under the License.
 
 [build-system]
-build-backend = "setuptools.build_meta:__legacy__"
+build-backend = "setuptools.build_meta"
 requires = [
     "setuptools>=64.0.0",
     "cython>=0.29,<0.30",
     "tomli  ; python_version < '3.11'",
+    "versioneer>=0.24",
 ]
 
 [project]
