Migrate as much as possible to `pyproject.toml` (#895)
* Move all package metadata to `pyproject.toml`
* Devendor `versioneer` (and use latest)
* Use updated `cmdclass` handling from `versioneer`
* Move `versioneer`, `isort`, and `pytest` configs to `pyproject.toml`
* Add `tomli` as a dependency
* Consolidate `flake8` configurations
* Pass `Extension`s directly to `new_build_ext` (as it already calls `cythonize` for us)
* Move package data handling to `MANIFEST.in`

--- a/conda/recipes/ucx-py/meta.yaml
+++ b/conda/recipes/ucx-py/meta.yaml
@@ -21,6 +21,8 @@ requirements:
     - pip
     - cython
     - ucx
+    - tomli  # [py<311]
+    - versioneer >=0.24
   run:
     - python
     - numpy
