--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,10 @@ classifiers = [
 test = [
     "pytest",
     "pytest-asyncio",
+    "cloudpickle",
+    "dask",
+    "distributed",
+    "cupy-cuda11x",
 ]
 
 [project.urls]
