Hardcode repo name in concurrency rules.

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -26,7 +26,7 @@ on:
         default: nightly
 
 concurrency:
-  group: "${{ github.repository }}-${{ github.workflow }}-${{ github.ref }}"
+  group: "ucx-py-${{ github.workflow }}-${{ github.ref }}"
   cancel-in-progress: true
 
 jobs:
