--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -36,5 +36,6 @@ jobs:
       package-name: ucx_py
       test-docker-options: "--cap-add CAP_SYS_PTRACE --shm-size=8g"
       test-before-arm64: "pip install cupy-cuda11x -f https://pip.cupy.dev/aarch64"
+      # skipped test context: https://github.com/rapidsai/ucx-py/pull/909
       test-unittest: "pytest -k 'not test_send_recv_am' --cache-clear -vs ./ucp/_libs/tests/ && pytest --cache-clear -vs ./tests"
-      test-smoketest: "" #"python ci/wheel_smoke_test_ucx_py.py"
+      test-smoketest: "pytest -k 'not test_send_recv_am' --cache-clear -vs ./ucp/_libs/tests/ && pytest --cache-clear -vs ./tests"
