--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -18,7 +18,7 @@ jobs:
     uses: rapidsai/shared-action-workflows/.github/workflows/pr-builder.yaml@main
   wheel-build-ucx-py:
     secrets: inherit
-    uses: rapidsai/shared-action-workflows/.github/workflows/wheels-manylinux-build.yml@upkeep/manylinux-improvements
+    uses: rapidsai/shared-action-workflows/.github/workflows/wheels-manylinux-build.yml@main
     with:
       build_type: pull-request
       package-name: ucx_py
@@ -29,7 +29,7 @@ jobs:
   wheel-tests-ucx-py:
     needs: wheel-build-ucx-py
     secrets: inherit
-    uses: rapidsai/shared-action-workflows/.github/workflows/wheels-manylinux-test.yml@upkeep/manylinux-improvements
+    uses: rapidsai/shared-action-workflows/.github/workflows/wheels-manylinux-test.yml@main
     with:
 
       build_type: pull-request
