--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,11 +11,11 @@ repos:
         rev: 22.3.0
         hooks:
               - id: black
-      - repo: https://gitlab.com/pycqa/flake8
+      - repo: https://github.com/pycqa/flake8
         rev: 3.8.3
         hooks:
               - id: flake8
-      - repo: https://gitlab.com/pycqa/flake8
+      - repo: https://github.com/pycqa/flake8
         rev: 3.8.3
         hooks:
               - id: flake8
