--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -23,7 +23,9 @@ jobs:
     secrets: inherit
     uses: rapidsai/shared-action-workflows/.github/workflows/checks.yaml@main
   conda-python-build:
-    needs: checks
+    # TODO: uncomment line below before merging PR.
+    # commenting the line out temporarily allows for faster PR iterations.
+    # needs: checks
     secrets: inherit
     uses: rapidsai/shared-action-workflows/.github/workflows/conda-python-matrix-build.yaml@main
     with:
