add `cupy` as `test_python` dependency

--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -77,5 +77,6 @@ dependencies:
     common:
       - output_types: [conda, requirements]
         packages:
-          - pytest
+          - cupy
           - numba
+          - pytest
