add `cudf` as `test_python` dependency

--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -77,6 +77,7 @@ dependencies:
     common:
       - output_types: [conda, requirements]
         packages:
+          - cudf=23.02
           - cupy
           - numba
           - pytest
