Build CUDA `11.8` and Python `3.10` Packages
This PR updates `ucx-py` to build against branch [cuda-118](https://github.com/rapidsai/shared-action-workflows/compare/cuda-118) of the `shared-action-workflow` repository.

That branch contains updates for CUDA `11.8` and Python `3.10` packages.

It also includes some minor file renames.

--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -65,6 +65,9 @@ dependencies:
               py: "3.10"
             packages:
               - python=3.10
+          - matrix:
+            packages:
+              - python>=3.8,<3.11
   run:
     common:
       - output_types: [conda, requirements]
